==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-Probe/Target/Communication/Generic/RS-232/Ports/Atmel/ATXmega128/probe_rs232c.c <==
#include  <probe_com.h>
#include  <probe_rs232.h>
#include  <bsp.h>
#define  PORTC_BASE_ADDR                       (CPU_INT16U)(0x0640)
#define  PORTD_BASE_ADDR                       (CPU_INT16U)(0x0660)
#define  PORTE_BASE_ADDR                       (CPU_INT16U)(0x0680)
#define  PORTF_BASE_ADDR                       (CPU_INT16U)(0x06A0)
#define  USARTC0_BASE_ADDR                     (CPU_INT16U)(0x08A0)
#define  USARTC1_BASE_ADDR                     (CPU_INT16U)(0x08B0)
#define  USARTD0_BASE_ADDR                     (CPU_INT16U)(0x09A0)
#define  USARTD1_BASE_ADDR                     (CPU_INT16U)(0x09B0)
#define  USARTE0_BASE_ADDR                     (CPU_INT16U)(0x0AA0)
#define  USARTE1_BASE_ADDR                     (CPU_INT16U)(0x0AB0)
#define  USARTF0_BASE_ADDR                     (CPU_INT16U)(0x0BA0)
#define  USARTF1_BASE_ADDR                     (CPU_INT16U)(0x0BB0)
#define  PMIC_BASE_ADDR                        (CPU_INT16U)0x00A0
#define  PMIC_CTRL                   (*(volatile CPU_INT08U *)(PMIC_BASE_ADDR + 0x02))
#define  PORTC_DIRSET                (*(volatile CPU_INT08U *)(PORTC_BASE_ADDR + 0x01))
#define  PORTC_DIRCLR                (*(volatile CPU_INT08U *)(PORTC_BASE_ADDR + 0x02))
#define  PORTC_OUTSET                (*(volatile CPU_INT08U *)(PORTC_BASE_ADDR + 0x05))
#define  PORTD_DIRSET                (*(volatile CPU_INT08U *)(PORTD_BASE_ADDR + 0x01))
#define  PORTD_DIRCLR                (*(volatile CPU_INT08U *)(PORTD_BASE_ADDR + 0x02))

void  ProbeRS232_InitTarget (CPU_INT32U baud_rate)
{
    CPU_INT32U   clk_div;                                       /* Clock divider                                             */
    CPU_INT32U   per_freq;                                      /* USART peripheral clk                                      */

    
    per_freq           =  BSP_SysClk_DevGetFreq(BSP_SYS_CLK_OUT_PER);    
    clk_div            =  ((per_freq / baud_rate) - 1) / 16;    /* Calculate the clk divider for the baud rate generator     */
    
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    PORTC_OUTSET       = PORTX_USART0_TX;                       /* set PC3 (TXC0) state as high                              */ 
    PORTC_DIRSET       = PORTX_USART0_TX;                       /* set PC3 (TXC0) as output pin                              */
    PORTC_DIRCLR       = PORTX_USART0_RX;                       /* set PC2 (RXC0) as input pin                               */

    USARTC0_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTC0_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTC0_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTC0_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTC0_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    PORTC_OUTSET       = PORTX_USART1_TX;                       /* set PC7 (TXC1) state as high                              */ 
    PORTC_DIRSET       = PORTX_USART1_TX;                       /* set PC7 (TXC1) as output pin                              */
    PORTC_DIRCLR       = PORTX_USART1_RX;                       /* set PC6 (RXC1) as input pin                               */

    USARTC1_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTC1_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTC1_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTC1_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTC1_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    PORTD_OUTSET       = PORTX_USART0_TX;                       /* set PD3 (TXD0) state as high                              */ 
    PORTD_DIRSET       = PORTX_USART0_TX;                       /* set PD3 (TXD0) as output pin                              */
    PORTD_DIRCLR       = PORTX_USART0_RX;                       /* set PD2 (RXD0) as input pin                               */

    USARTD0_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTD0_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTD0_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTD0_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTD0_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    PORTD_OUTSET       = PORTX_USART1_TX;                       /* set PD7 (TXD1) state as high                              */ 
    PORTD_DIRSET       = PORTX_USART1_TX;                       /* set PD7 (TXD1) as output pin                              */
    PORTD_DIRCLR       = PORTX_USART1_RX;                       /* set PD6 (RXD1) as input pin                               */

    USARTD1_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTD1_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTD1_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTD1_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTD1_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    PORTE_OUTSET       = PORTX_USART0_TX;                       /* set PE3 (TXE0) state as high                              */ 
    PORTE_DIRSET       = PORTX_USART0_TX;                       /* set PE3 (TXE0) as output pin                              */
    PORTE_DIRCLR       = PORTX_USART0_RX;                       /* set PE2 (RXE0) as input pin                               */

    USARTE0_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTE0_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTE0_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTE0_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTE0_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    PORTE_OUTSET       = PORTX_USART1_TX;                       /* set PE7 (TXD1) state as high                              */ 
    PORTE_DIRSET       = PORTX_USART1_TX;                       /* set PE7 (TXD1) as output pin                              */
    PORTE_DIRCLR       = PORTX_USART1_RX;                       /* set PE6 (RXD1) as input pin                               */

    USARTE1_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTE1_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTE1_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTE1_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTE1_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    PORTF_OUTSET       = PORTX_USART0_TX;                       /* set PF7 (TXE0) state as high                              */ 
    PORTF_DIRSET       = PORTX_USART0_TX;                       /* set PF7 (TXE0) as output pin                              */
    PORTF_DIRCLR       = PORTX_USART0_RX;                       /* set PF6 (RXE0) as input pin                               */

    USARTF0_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTF0_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTF0_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTF0_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTF0_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    PORTF_OUTSET       = PORTX_USART1_TX;                       /* set PF7 (TXD1) state as high                              */ 
    PORTF_DIRSET       = PORTX_USART1_TX;                       /* set PF7 (TXD1) as output pin                              */
    PORTF_DIRCLR       = PORTX_USART1_RX;                       /* set PF6 (RXD1) as input pin                               */

    USARTF1_CTRLA      = 0x00;                                  /* Disable all interrupts                                    */
    USARTF1_CTRLC      = USART_CMODE_ASYNC                      /* Asynchronous USART                                        */
                       | USART_PMODE_PARITY_DIS                 /* Parity disable                                            */
                       | USART_SBMODE_ONE                       /* Stop bit : 1                                              */
                       | USART_CHSIZE_8;                        /* 8-bit chatacter                                           */

    USARTF1_BAUDCTRLA  = (CPU_INT08U)((CPU_INT16U)clk_div  & 0xFF);
    USARTF1_BAUDCTRLB  = (CPU_INT08U)((CPU_INT16U)clk_div >>    8);

    USARTF1_CTRLB      = USART_CTRLB_RX_EN                      /* Enable RX & TX                                            */
                       | USART_CTRLB_TX_EN;              
#endif
    
    PMIC_CTRL         |= DEF_BIT_02;                             /* Enable High Level interrupts                             */
    
}

void  ProbeRS232_Tx1 (CPU_INT08U c)
{
   
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    USARTC0_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    USARTC1_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    USARTD0_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    USARTD1_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    USARTE0_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    USARTE1_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    USARTF0_DATA = c;
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    USARTF1_DATA = c;
#endif
    
}

void  ProbeRS232_TxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    USARTC0_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    USARTC1_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    USARTD0_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif
    
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    USARTD1_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    USARTE0_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    USARTE1_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    USARTF0_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    USARTF1_CTRLA &= ~(DEF_BIT_03 | DEF_BIT_02);
#endif
}

void  ProbeRS232_TxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    USARTC0_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    USARTC1_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    USARTD0_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif
    
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    USARTD1_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    USARTE0_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    USARTE1_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    USARTF0_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    USARTF1_CTRLA |= (DEF_BIT_02 | DEF_BIT_03);
#endif
}

void  ProbeRS232_RxIntDis (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    USARTC0_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    USARTC1_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    USARTD0_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif
    
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    USARTD1_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    USARTE0_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    USARTE1_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    USARTF0_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    USARTF1_CTRLA &= ~(DEF_BIT_05 | DEF_BIT_04);
#endif

}

void  ProbeRS232_RxIntEn (void)
{
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_0)
    USARTC0_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_1)
    USARTC1_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_2)
    USARTD0_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif
    
#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_3)
    USARTD1_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_4)
    USARTE0_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_5)
    USARTE1_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_6)
    USARTF0_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif

#if (PROBE_RS232_CFG_COMM_SEL == PROBE_RS232_UART_7)
    USARTF1_CTRLA |= (DEF_BIT_04 | DEF_BIT_05);
#endif
}
